Bug 419285. nsCSSFrameConstructor should stop looking for first-letter content after a <br>. r+sr=dbaron